# ShilmanDB

./: .gitignore  CMakeLists.txt  README.md
bench/: CMakeLists.txt  generate_join_training_data.cpp  generate_tpch_data.sh  load_tpch.cpp  run_benchmarks.py  run_shilmandb_benchmarks.py  run_sqlite_benchmarks.py
docs/: architecture.md  benchmarking_results.md
ml/eviction_policy/: compute_reuse_distances.py  evaluate_eviction_model.py  evaluate_eviction_model_v2.py  export_model.py  export_model_v2.py  generate_access_trace.py  generate_feature_training_data.py  generate_multiscale_traces.py  generate_zipfian_trace.py  train_eviction_model.py  train_eviction_model_v2.py
ml/join_optimizer/: evaluate_join_model.py  export_model.py  generate_training_data.py  train_join_model.py
scripts/: build.sh  compare_results.py  run_all.sh  setup_libtorch.sh
src/buffer/: buffer_pool_manager.cpp  buffer_pool_manager.hpp  eviction_policy.hpp  learned_eviction_policy.cpp  learned_eviction_policy.hpp  learned_eviction_policy_v2.cpp  learned_eviction_policy_v2.hpp
src/catalog/: catalog.cpp  catalog.hpp  schema.cpp  schema.hpp  table_stats.hpp
src/common/: config.hpp  exception.hpp  rid.hpp  stub.cpp
src/engine/: database.cpp  database.hpp
src/executor/: aggregate_executor.cpp  aggregate_executor.hpp  aggregate_state.cpp  aggregate_state.hpp  executor.hpp  executor_context.hpp  executor_factory.cpp  executor_factory.hpp  expression_evaluator.hpp  filter_executor.cpp  filter_executor.hpp  hash_join_executor.cpp  hash_join_executor.hpp  index_scan_executor.cpp  index_scan_executor.hpp  limit_executor.cpp  limit_executor.hpp  nested_loop_join_executor.cpp  nested_loop_join_executor.hpp  projection_executor.cpp  projection_executor.hpp  seq_scan_executor.cpp  seq_scan_executor.hpp  sort_executor.cpp  sort_executor.hpp  vectorized_aggregate_executor.cpp  vectorized_aggregate_executor.hpp  vectorized_projection_executor.cpp  vectorized_projection_executor.hpp
src/index/: btree_index.cpp  btree_index.hpp  btree_internal_page.cpp  btree_internal_page.hpp  btree_leaf_page.cpp  btree_leaf_page.hpp
src/parser/: ast.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  token.hpp
src/planner/: cost_model.cpp  cost_model.hpp  index_selector.cpp  index_selector.hpp  join_order_optimizer.cpp  join_order_optimizer.hpp  learned_join_optimizer.cpp  learned_join_optimizer.hpp  plan_node.hpp  planner.cpp  planner.hpp
src/storage/: disk_manager.cpp  disk_manager.hpp  table_heap.cpp  table_heap.hpp
src/types/: tuple.cpp  tuple.hpp  types.hpp  value.cpp  value.hpp
test/: CMakeLists.txt
test/buffer/: buffer_pool_manager_test.cpp  lru_eviction_policy_test.cpp
test/catalog/: catalog_test.cpp
test/executor/: aggregate_executor_test.cpp  case_expression_test.cpp  data_chunk_test.cpp  filter_executor_test.cpp  hash_join_executor_test.cpp  index_scan_executor_test.cpp  like_expression_test.cpp  limit_executor_test.cpp  nested_loop_join_executor_test.cpp  projection_executor_test.cpp  seq_scan_executor_test.cpp  sort_executor_test.cpp  vectorized_filter_executor_test.cpp  vectorized_parity_harness.hpp  vectorized_projection_aggregate_parity_test.cpp  vectorized_seq_scan_executor_test.cpp
test/index/: btree_index_test.cpp  btree_internal_page_test.cpp  btree_leaf_page_test.cpp
test/integration/: end_to_end_test.cpp  sqlite_comparison_test.cpp
test/parser/: between_in_case_test.cpp  between_in_test.cpp  case_test.cpp  lexer_test.cpp  like_test.cpp
test/planner/: index_selection_test.cpp  join_order_optimizer_test.cpp  nested_aggregate_test.cpp  planner_test.cpp
test/storage/: disk_manager_test.cpp  slotted_page_test.cpp
test/types/: tuple_test.cpp  value_test.cpp
